--- a/public/views/index.html
+++ b/public/views/index.html
@@ -28,7 +28,7 @@
   <div class="container">
     <header class="main-header">
       <a class="site-logo" href="/">
-        <img src="images/logo.png" alt="logo">
+        <img src="http://media.techonline.com/img/tmp/logo-placeholder.png" alt="logo">
       </a>
       <ul class="nav">
         <li><a href="/about">about</a></li>
