about contact projects page set up

--- a/public/views/templates/about.html
+++ b/public/views/templates/about.html
@@ -1,8 +1,25 @@
+<center>
 <h2>about</h2>
   <ul>
-    <li>WHO // ALEX CHAN</li>
-    <li>WHAT // FULL STACK WEB DEVELOPER</li>
-    <li>WHERE // SAN FRANCISCO, CA</li>
-    <li>WHEN // 2015 - PRESENT</li>
-    <li>WHY // PASSION</li>
+    <p>WHO // ALEX CHAN</p>
+    <p>WHAT // FULL STACK WEB DEVELOPER</p>
+    <p>WHERE // SAN FRANCISCO, CA</p>
+    <p>WHEN // 2015 - PRESENT</p>
+    <p>WHY // PASSION</p>
   </ul>
+</center>
+<br>
+
+<center>
+<h2>I have used the following technologies and applications as part of my development</h2>
+  <ul>
+    <img src="http://placehold.it/150x150?text=Express">
+    <img src="http://placehold.it/150x150?text=AngularJS">
+    <img src="http://placehold.it/150x150?text=Ruby on Rails">
+    <img src="http://placehold.it/150x150?text=MongoDB">
+    <img src="http://placehold.it/150x150?text=PostgreSQL">
+    <img src="http://placehold.it/150x150?text=jQuery">
+    <img src="http://placehold.it/150x150?text=Bootstrap">
+    <img src="http://placehold.it/150x150?text=Git">
+  </ul>
+</center>
