--- a/public/views/templates/about.html
+++ b/public/views/templates/about.html
@@ -1,4 +1,4 @@
-<center>
+<div class="container align-center">
 <h2>about</h2>
   <ul>
     <p>WHO // ALEX CHAN</p>
@@ -7,10 +7,8 @@
     <p>WHEN // 2015 - PRESENT</p>
     <p>WHY // PASSION</p>
   </ul>
-</center>
 <br>
 
-<center>
 <h2>I have used the following technologies and applications as part of my development</h2>
   <ul>
     <img src="http://placehold.it/150x150?text=Express">
@@ -22,4 +20,4 @@
     <img src="http://placehold.it/150x150?text=Bootstrap">
     <img src="http://placehold.it/150x150?text=Git">
   </ul>
-</center>
+</div>
