--- a/public/views/templates/contact.html
+++ b/public/views/templates/contact.html
@@ -1,9 +1,24 @@
-<div class="container">
+<div class="container align-center">
   <div class="row">
     <div class="col-md-12">
-      <img src="http://placehold.it/100x100?text=LinkedIn">
-      <img src="http://placehold.it/100x100?text=GitHub">
-      <img src="http://placehold.it/100x100?text=Email">
+      <a href="https://www.linkedin.com/in/alexchan415">
+        <span class="fa-stack fa-3x">
+          <i class="fa fa-circle-thin fa-stack-2x"></i>
+          <i class="fa fa-linkedin fa-stack-1x"></i>
+        </span>
+      </a>
+      <a href="https://github.com/alex415">
+        <span class="fa-stack fa-3x">
+          <i class="fa fa-circle-thin fa-stack-2x"></i>
+          <i class="fa fa-github fa-stack-1x"></i>
+        </span>
+      </a>
+      <a href="mailto:alex415@gmail.com">
+        <span class="fa-stack fa-3x">
+          <i class="fa fa-circle-thin fa-stack-2x"></i>
+          <i class="fa fa-envelope-o  fa-stack-1x"></i>
+        </span>
+      </a>
     </div>
   </div>
 </div>
