--- a/public/views/templates/landing.html
+++ b/public/views/templates/landing.html
@@ -1,4 +1,4 @@
-<center>
-<h1>ALEX CHAN</h1>
-<p>FULL STACK WEB DEVELOPER</p>
-</center>
+<div class="container align-center">
+  <h1>ALEX CHAN</h1>
+  <p>FULL STACK WEB DEVELOPER</p>
+</div>
