--- a/public/views/templates/projects.html
+++ b/public/views/templates/projects.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container align-center">
   <div class="row">
     <div class="col-md-6">
       <img src="http://placehold.it/500x217">
