--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,5 +1,16 @@
 /*======= Navbar Styling ============*/
 
+.nav > li a:link,
+.nav > li a:visited,
+.nav > li a:hover,
+.nav > li a:active {
+  background-color: transparent;
+}
+
+.nav > li > a:hover {
+  color: #FFF;
+}
+
 .nav-container {
   width: 100%;
   padding: 0;
@@ -30,10 +41,6 @@
   align-self: center;
 }
 
-.nav {
-  margin-top: 1.5em;
-}
-
 .nav a {
   display: block;
   color: #e9e9e9;
@@ -41,15 +48,6 @@
   font-weight: 300;
   text-align: center;
   padding: .4em;
-}
-
-.nav > li > a:active {
-  background-color: transparent;
-}
-
-.nav > li > a:hover {
-  color: #FFF;
-  background-color: transparent;
 }
 
 /*======= Media Queries ============*/
