added project images

--- a/public/views/templates/about.html
+++ b/public/views/templates/about.html
@@ -1,23 +1,26 @@
 <div class="container align-center">
 <h2>about</h2>
   <ul>
-    <p>WHO // ALEX CHAN</p>
-    <p>WHAT // FULL STACK WEB DEVELOPER</p>
-    <p>WHERE // SAN FRANCISCO, CA</p>
-    <p>WHEN // 2015 - PRESENT</p>
-    <p>WHY // PASSION</p>
+    <p><b>Who:</b> Alex Chan</p>
+    <p><b>What:</b> Full Stack Web Developer</p>
+    <p><b>Where:</b> San Francisco, CA</p>
+    <p><b>When:</b> 2015 - Present</p>
+    <p><b>Why:</b> Passion</p>
   </ul>
 <br>
 
-<h2>I have used the following technologies and applications as part of my development</h2>
+<h4>I have used the following technologies and applications as part of my development</h2>
   <ul>
-    <img src="http://placehold.it/150x150?text=Express">
-    <img src="http://placehold.it/150x150?text=AngularJS">
-    <img src="http://placehold.it/150x150?text=Ruby on Rails">
-    <img src="http://placehold.it/150x150?text=MongoDB">
-    <img src="http://placehold.it/150x150?text=PostgreSQL">
-    <img src="http://placehold.it/150x150?text=jQuery">
-    <img src="http://placehold.it/150x150?text=Bootstrap">
-    <img src="http://placehold.it/150x150?text=Git">
+    <img src="images/NodeJS.png">
+    <img src="images/Express.png">
+    <img src="images/AngularJS.png">
+    <img src="images/RubyOnRails.png">
+    <img src="images/MongoDB.png">
+    <img src="images/PostgreSQL.png">
+    <img src="images/jQuery.png">
+    <img src="images/Bootstrap.png">
+    <img src="images/GoogleFontApi.png">
+    <img src="images/FontAwesome.png">
+    <img src="images/GoogleMaps.png">
   </ul>
 </div>
