--- a/public/views/templates/projects.html
+++ b/public/views/templates/projects.html
@@ -1,11 +1,11 @@
 <div class="container align-center">
   <div class="row">
-    <div class="col-md-6">
-      <img src="http://placehold.it/500x217">
+    <div class="col-sm-6">
+      <img src="images/Canopy.svg">
         <h4>Canopy</h4>
     </div>
-    <div class="col-md-6">
-      <img src="http://placehold.it/500x217">
+    <div class="col-sm-6">
+      <img src="images/PubCrawler.svg">
         <h4>Pub Crawler</h4>
     </div>
   </div>
