--- a/public/views/index.html
+++ b/public/views/index.html
@@ -23,7 +23,7 @@
   <!-- font awesome cdn -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
-  <title>Document</title>
+  <title>Alex Chan</title>
 </head>
 <body ng-controller="MainCtrl">
   
@@ -33,7 +33,11 @@
       <a class="site-logo" href="/">
         <span class="fa-stack fa-3x">
           <i class="fa fa-circle-thin fa-stack-2x"></i>
-          <i class="fa fa-user  fa-stack-1x"></i>
+          <i class="fa fa-adn fa-stack-1x"></i>
+        </span>
+        <span class="fa-stack fa-3x">
+          <i class="fa fa-circle-thin fa-stack-2x"></i>
+          <i class="fa fa-contao fa-stack-1x"></i>
         </span>
       </a>
       <ul class="nav">
