--- a/public/views/templates/about.html
+++ b/public/views/templates/about.html
@@ -1,4 +1,4 @@
-<div class="container align-center">
+<div class="container align-center" id="about-container">
 <h2>about</h2>
   <ul>
     <p><b>Who:</b> Alex Chan</p>
