--- a/public/views/templates/contact.html
+++ b/public/views/templates/contact.html
@@ -1,4 +1,4 @@
-<div class="container align-center">
+<div class="container align-center" id="contact-container">
   <div class="row">
     <div class="col-md-12">
       <a href="https://www.linkedin.com/in/alexchan415">
