--- a/public/views/templates/landing.html
+++ b/public/views/templates/landing.html
@@ -1,4 +1,7 @@
-<div class="container align-center">
+<div class="container align-center" id="landing-container">
+  <span class="fa-stack fa-3x">
+    <i class="fa fa-circle-thin fa-stack-2x"></i>
+    <i class="fa fa-user fa-stack-1x"></i>
+  </span>
   <h1>ALEX CHAN</h1>
-  <p>FULL STACK WEB DEVELOPER</p>
 </div>
