--- a/public/views/templates/projects.html
+++ b/public/views/templates/projects.html
@@ -1,12 +1,16 @@
-<div class="container align-center">
+<div class="container align-center" id="projects-container">
   <div class="row">
     <div class="col-sm-6">
       <img src="images/Canopy.svg">
-        <h4>Canopy</h4>
+      <h4>Canopy</h4>
+      <i class="fa fa-github"></i>
+      <i class="fa fa-external-link"></i>
     </div>
     <div class="col-sm-6">
       <img src="images/PubCrawler.svg">
-        <h4>Pub Crawler</h4>
+      <h4>Pub Crawler</h4>
+      <i class="fa fa-github"></i>
+      <i class="fa fa-external-link"></i>
     </div>
   </div>
 </div>
