changed to portfolio

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -42,7 +42,7 @@
       </a>
       <ul class="nav">
         <li><a href="/about">about</a></li>
-        <li><a href="/projects">projects</a></li>
+        <li><a href="/portfolio">portfolio</a></li>
         <li><a href="/contact">contact</a></li>
       </ul>
     </header>
