changed profile and about page

--- a/public/views/templates/contact.html
+++ b/public/views/templates/contact.html
@@ -1,6 +1,7 @@
 <div class="container align-center" id="contact-container">
   <div class="row">
     <div class="col-md-12">
+      <h1>Connect and Collaborate</h1>
       <a href="https://www.linkedin.com/in/alexchan415">
         <span class="fa-stack fa-3x">
           <i class="fa fa-circle-thin fa-stack-2x"></i>
