--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -17,6 +17,20 @@
   margin: 0;
 }
 
+ul.nav {
+  /* Safari 5.1, Chrome 10+ */
+  background: -webkit-linear-gradient(top, #222, rgba(45, 45, 45, 1));
+
+  /* Firefox 3.6+ */
+  background: -moz-linear-gradient(top, #222, rgba(45, 45, 45, 1));
+
+  /* IE 10 */
+  background: -ms-linear-gradient(top, #222, rgba(45, 45, 45, 1));
+  -webkit-box-shadow: 0 6px 6px -6px #999;
+  -moz-box-shadow: 0 6px 6px -6px #999;
+  box-shadow: 0 6px 6px -6px #999;
+}
+
 .main-header,
 .nav {
   display: flex;
@@ -26,19 +40,20 @@
 .main-header {
   padding-top: 2em;
 
-  /* Safari 5.1+, Chrome 10+ */
-  background: -webkit-radial-gradient(circle, #222, #2d2d2d);
+  /* Safari 5.1, Chrome 10+ */
+  background: -webkit-linear-gradient(top, rgba(45, 45, 45, .9), #222);
 
   /* Firefox 3.6+ */
-  background: -moz-linear-gradient(circle, #222, #2d2d2d);
+  background: -moz-linear-gradient(top, rgba(45, 45, 45, .9), #222);
 
   /* IE 10 */
-  background: -ms-linear-gradient(circle, #222, #2d2d2d);
+  background: -ms-linear-gradient(top, rgba(45, 45, 45, .9), #222);
 }
 
 .site-logo {
 /*  width: 110px;*/
   align-self: center;
+  margin-bottom: 2em;
 }
 
 .nav a {
