--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -37,3 +37,14 @@ body {
   font-family: ;
   font-size: 6em;
 }
+
+#footer{
+  position: fixed;
+  height: 80px;
+  width: 100%;
+  background-color: #1E2222;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  margin-bottom: 0px;
+}
