--- a/public/views/templates/about.html
+++ b/public/views/templates/about.html
@@ -1,26 +1,46 @@
-<div class="container align-center" id="about-container">
-<h2>about</h2>
-  <ul>
-    <p><b>Who:</b> Alex Chan</p>
-    <p><b>What:</b> Full Stack Web Developer</p>
-    <p><b>Where:</b> San Francisco, CA</p>
-    <p><b>When:</b> 2015 - Present</p>
-    <p><b>Why:</b> Passion</p>
-  </ul>
-<br>
+<div class="container">
+  <div class="row">
 
-<h4>I have used the following technologies and applications as part of my development</h2>
-  <ul>
-    <img src="images/NodeJS.png">
-    <img src="images/Express.png">
-    <img src="images/AngularJS.png">
-    <img src="images/RubyOnRails.png">
-    <img src="images/MongoDB.png">
-    <img src="images/PostgreSQL.png">
-    <img src="images/jQuery.png">
-    <img src="images/Bootstrap.png">
-    <img src="images/GoogleFontApi.png">
-    <img src="images/FontAwesome.png">
-    <img src="images/GoogleMaps.png">
-  </ul>
+    <div class="container align-center" id="about-container">
+      <div class="row">
+        <img src="images/180.svg">
+      </div>
+    </div>
+
+    <div class="container align-center">
+      <div class="row">
+        <div class="col-sm-4 col-sm-offset-4 well">
+          <h2>about</h2>
+          <p><b>Who:</b> Alex Chan</p>
+          <p><b>What:</b> Full Stack Web Developer</p>
+          <p><b>Where:</b> San Francisco, CA</p>
+          <p><b>When:</b> 2015 - Present</p>
+          <p><b>Why:</b> Passion</p>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="container align-center">
+      <div class="row">
+        <h4>I have used the following technologies and applications as part of my development</h4>
+        <ul>
+          <img src="images/NodeJS.png" width="40px">
+          <img src="images/Express.png" width="40px">
+          <img src="images/AngularJS.png" width="40px">
+          <img src="images/Ruby.png" width="40px">
+          <img src="images/RubyOnRails.png" width="40px">
+          <img src="images/MongoDB.png" width="40px">
+          <img src="images/PostgreSQL.png" width="40px">
+          <img src="images/jQuery.png" width="40px">
+          <img src="images/Bootstrap.png" width="40px">
+          <img src="images/GoogleFontApi.png" width="40px">
+          <img src="images/FontAwesome.png" width="40px">
+          <img src="images/GoogleMaps.png" width="40px">
+          <img src="images/GoogleAnalytics.png" width="40px">
+        </ul>
+      </div>
+    </div>
+
+  </div>
 </div>
