--- a/public/views/templates/portfolio.html
+++ b/public/views/templates/portfolio.html
@@ -1,3 +1,9 @@
+<div class="container align-center">
+  <div class="row">
+    <h1>A glance at some of the work I've done</h1>
+  </div>
+</div>
+
 <div class="container align-center" id="projects-container">
   <div class="row">
     <div class="col-sm-6">
