--- a/public/views/index.html
+++ b/public/views/index.html
@@ -31,14 +31,15 @@
   <div class="container nav-container">
     <header class="main-header">
       <a class="site-logo" href="/">
-        <span class="fa-stack fa-3x">
+      <p class="navbar-text">ALEX CHAN</p> 
+<!--         <span class="fa-stack fa-3x">
           <i class="fa fa-circle-thin fa-stack-2x"></i>
           <i class="fa fa-adn fa-stack-1x"></i>
         </span>
         <span class="fa-stack fa-3x">
           <i class="fa fa-circle-thin fa-stack-2x"></i>
           <i class="fa fa-contao fa-stack-1x"></i>
-        </span>
+        </span> -->
       </a>
       <ul class="nav">
         <li><a href="/about">about</a></li>
