--- a/public/views/templates/portfolio.html
+++ b/public/views/templates/portfolio.html
@@ -1,22 +1,15 @@
-<div class="container align-center">
-  <div class="row">
-    <h1>A glance at some of the work I've done</h1>
-  </div>
-</div>
-
 <div class="container align-center" id="projects-container">
   <div class="row">
     <div class="col-sm-6">
-      <img src="images/Canopy.svg">
       <h4>Canopy</h4>
-      <i class="fa fa-github"></i>
-      <i class="fa fa-external-link"></i>
+      <img src="images/Canopy.svg"><br>
+      <button class="btn btn-primary project-button">VIEW PROJECT</button>
     </div>
     <div class="col-sm-6">
-      <img src="images/PubCrawler.svg">
       <h4>Pub Crawler</h4>
-      <i class="fa fa-github"></i>
-      <i class="fa fa-external-link"></i>
+      <img src="images/PubCrawler.svg"><br>
+      <button class="btn btn-primary project-button">VIEW PROJECT</button>
+<!--       <i class="fa fa-github"></i> -->
     </div>
   </div>
 </div>
