--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,5 +1,41 @@
 /*======= Navbar Styling ============*/
 
+.main-header,
+.nav {
+  display: flex;
+  flex-direction: column;
+}
+
+.main-header {
+  background: -webkit-linear-gradient(top, rgba(45, 45, 45, .9), #222);
+  background: -moz-linear-gradient(top, rgba(45, 45, 45, .9), #222);
+  background: -ms-linear-gradient(top, rgba(45, 45, 45, .9), #222);
+  -webkit-box-shadow: 0 6px 6px -6px #999;
+  -moz-box-shadow: 0 6px 6px -6px #999;
+  box-shadow: 0 6px 6px -6px #999;
+}
+
+.site-logo {
+  align-self: center;
+}
+
+.nav a {
+  display: block;
+  color: #e9e9e9;
+  font-size: 1.125em;
+  font-weight: 300;
+  text-align: center;
+  padding: .4em;
+}
+
+.navbar-text {
+  font-family: GothamCond-Medium;
+  font-size: 40px;
+  letter-spacing: 1px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 .nav > li a:link,
 .nav > li a:visited,
 .nav > li a:hover,
@@ -18,51 +54,12 @@
 }
 
 ul.nav {
-  /* Safari 5.1, Chrome 10+ */
   background: -webkit-linear-gradient(top, #222, rgba(45, 45, 45, 1));
-
-  /* Firefox 3.6+ */
   background: -moz-linear-gradient(top, #222, rgba(45, 45, 45, 1));
-
-  /* IE 10 */
   background: -ms-linear-gradient(top, #222, rgba(45, 45, 45, 1));
   -webkit-box-shadow: 0 6px 6px -6px #999;
   -moz-box-shadow: 0 6px 6px -6px #999;
   box-shadow: 0 6px 6px -6px #999;
-}
-
-.main-header,
-.nav {
-  display: flex;
-  flex-direction: column;
-}
-
-.main-header {
-  padding-top: 2em;
-
-  /* Safari 5.1, Chrome 10+ */
-  background: -webkit-linear-gradient(top, rgba(45, 45, 45, .9), #222);
-
-  /* Firefox 3.6+ */
-  background: -moz-linear-gradient(top, rgba(45, 45, 45, .9), #222);
-
-  /* IE 10 */
-  background: -ms-linear-gradient(top, rgba(45, 45, 45, .9), #222);
-}
-
-.site-logo {
-/*  width: 110px;*/
-  align-self: center;
-  margin-bottom: 2em;
-}
-
-.nav a {
-  display: block;
-  color: #e9e9e9;
-  font-size: 1.125em;
-  font-weight: 300;
-  text-align: center;
-  padding: .4em;
 }
 
 /*======= Media Queries ============*/
@@ -72,10 +69,9 @@ ul.nav {
     justify-content: flex-end;
   }
   .site-logo {
-/*    width: 140px;*/
   }
   .nav {
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: center;
   }
 }
