--- a/public/views/index.html
+++ b/public/views/index.html
@@ -30,17 +30,9 @@
   <!-- navbar -->
   <div class="container nav-container">
     <header class="main-header">
-      <a class="site-logo" href="/">
-      <p class="navbar-text">ALEX CHAN</p> 
-<!--         <span class="fa-stack fa-3x">
-          <i class="fa fa-circle-thin fa-stack-2x"></i>
-          <i class="fa fa-adn fa-stack-1x"></i>
-        </span>
-        <span class="fa-stack fa-3x">
-          <i class="fa fa-circle-thin fa-stack-2x"></i>
-          <i class="fa fa-contao fa-stack-1x"></i>
-        </span> -->
-      </a>
+      <div class="site-logo">
+        <p class="navbar-text">ALEX CHAN</p> 
+      </div>
       <ul class="nav">
         <li><a href="/about">about</a></li>
         <li><a href="/portfolio">portfolio</a></li>
@@ -50,10 +42,6 @@
   </div>
   
   <ng-view></ng-view>
-
-  <div class="container" id="footer">
-    
-  </div>
 
 </body>
 </html>
