--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -17,24 +17,20 @@ body {
   font-family: ;
 }
 
-/*.no-margin {
-  margin: 0 auto;
-}*/
-
 .align-center {
   text-align: center;
 }
 
 #projects-container {
-  padding-top: 4em;
+  padding-top: 2.5em;
 }
 
 #contact-container {
-  padding-top: 3.5em;
+  padding-top: 1.5em;
 }
 
 #about-container {
-  padding-top: 4em;
+  padding-top: 2.5em;
 }
 
 #landing-container {
@@ -42,19 +38,22 @@ body {
 }
 
 #landing-container > h1 {
-  font-family: ;
   font-size: 6em;
 }
 
-#footer{
-  position: fixed;
-  height: 100px;
-  width: 100%;
-  background-color: #1E2222;
-  bottom: 0px;
-  left: 0px;
-  right: 0px;
-  margin-bottom: 0px;
+.project-preview {
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2);
+  border-radius: 3px;
+  background-color: #FFFFFF;
+}
+
+.project-preview:hover {
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);
+  transition: all .3s;
+  transition-property: all;
+  transition-duration: 0.3s;
+  transition-timing-function: initial;
+  transition-delay: initial;
 }
 
 /*======= Button Styling ============*/
