--- a/public/views/templates/about.html
+++ b/public/views/templates/about.html
@@ -9,8 +9,8 @@
 
     <div class="container align-center">
       <div class="row">
-        <div class="col-sm-4 col-sm-offset-4 well">
-          <h2>about</h2>
+        <div class="col-sm-4 col-sm-offset-4">
+          <h2>about me</h2>
           <p><b>Who:</b> Alex Chan</p>
           <p><b>What:</b> Full Stack Web Developer</p>
           <p><b>Where:</b> San Francisco, CA</p>
