--- a/public/views/templates/portfolio.html
+++ b/public/views/templates/portfolio.html
@@ -1,15 +1,18 @@
 <div class="container align-center" id="projects-container">
   <div class="row">
     <div class="col-sm-6">
-      <h4>Canopy</h4>
-      <img src="images/Canopy.svg"><br>
-      <button class="btn btn-primary project-button">VIEW PROJECT</button>
+      <div class="project-preview thumbnail">
+        <h4>Canopy</h4>
+        <img src="images/Canopy.svg">
+        <button class="btn btn-primary project-button">VIEW PROJECT</button>
+      </div>
     </div>
     <div class="col-sm-6">
-      <h4>Pub Crawler</h4>
-      <img src="images/PubCrawler.svg"><br>
-      <button class="btn btn-primary project-button">VIEW PROJECT</button>
-<!--       <i class="fa fa-github"></i> -->
+      <div class="project-preview thumbnail">
+        <h4>Pub Crawler</h4>
+        <img src="images/PubCrawler.svg">
+        <button class="btn btn-primary project-button">VIEW PROJECT</button>
+      </div>
     </div>
   </div>
 </div>
