--- a/public/views/index.html
+++ b/public/views/index.html
@@ -10,6 +10,7 @@
   <!-- custom styles -->
   <link type="text/css" rel="stylesheet" href="styles/style.css">
   <link type="text/css" rel="stylesheet" href="styles/nav.css">
+  <link type="text/css" rel="stylesheet" href="styles/hover.css">
 
   <!-- angular cdn -->
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.min.js"></script>
