--- a/public/views/templates/contact.html
+++ b/public/views/templates/contact.html
@@ -2,19 +2,19 @@
   <div class="row">
     <div class="col-md-12">
       <h1>Connect and Collaborate</h1>
-      <span class="fa-stack fa-3x">
+      <span class="fa-stack fa-3x hvr-grow">
         <a href="https://www.linkedin.com/in/alexchan415">
         <i class="fa fa-circle-thin fa-stack-2x"></i>
         <i class="fa fa-linkedin fa-stack-1x"></i>
         </a>
       </span>
-      <span class="fa-stack fa-3x">
+      <span class="fa-stack fa-3x hvr-grow">
         <a href="https://github.com/alex415">
         <i class="fa fa-circle-thin fa-stack-2x"></i>
         <i class="fa fa-github fa-stack-1x"></i>
         </a>
       </span>
-      <span class="fa-stack fa-3x">
+      <span class="fa-stack fa-3x hvr-grow">
         <a href="mailto:alex415@gmail.com">
         <i class="fa fa-circle-thin fa-stack-2x"></i>
         <i class="fa fa-envelope-o  fa-stack-1x"></i>
