--- a/public/views/templates/about.html
+++ b/public/views/templates/about.html
@@ -23,21 +23,24 @@
     <div class="container align-center">
       <div class="row">
         <h4>I have used the following technologies and applications as part of my development</h4>
-        <ul>
-          <img src="images/NodeJS.png" width="40px">
-          <img src="images/Express.png" width="40px">
-          <img src="images/AngularJS.png" width="40px">
-          <img src="images/Ruby.png" width="40px">
-          <img src="images/RubyOnRails.png" width="40px">
-          <img src="images/MongoDB.png" width="40px">
-          <img src="images/PostgreSQL.png" width="40px">
-          <img src="images/jQuery.png" width="40px">
-          <img src="images/Bootstrap.png" width="40px">
-          <img src="images/GoogleFontApi.png" width="40px">
-          <img src="images/FontAwesome.png" width="40px">
-          <img src="images/GoogleMaps.png" width="40px">
-          <img src="images/GoogleAnalytics.png" width="40px">
-        </ul>
+      </div>
+    </div>
+
+    <div class="container align-center">
+      <div class="row">
+        <img src="images/NodeJS.png" width="40px">
+        <img src="images/Express.png" width="40px">
+        <img src="images/AngularJS.png" width="40px">
+        <img src="images/Ruby.png" width="40px">
+        <img src="images/RubyOnRails.png" width="40px">
+        <img src="images/MongoDB.png" width="40px">
+        <img src="images/PostgreSQL.png" width="40px">
+        <img src="images/jQuery.png" width="40px">
+        <img src="images/Bootstrap.png" width="40px">
+        <img src="images/GoogleFontApi.png" width="40px">
+        <img src="images/FontAwesome.png" width="40px">
+        <img src="images/GoogleMaps.png" width="40px">
+        <img src="images/GoogleAnalytics.png" width="40px">
       </div>
     </div>
 
