--- a/public/views/templates/landing.html
+++ b/public/views/templates/landing.html
@@ -1,6 +1,18 @@
+<style>
+body {
+  background: url(/images/creative.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  margin: 0;
+  padding: 0;
+}
+</style>
+
 <div class="container align-center" id="landing-container">
-  <span class="fa-stack fa-3x">
+<!--   <span class="fa-stack fa-3x">
     <i class="fa fa-circle-thin fa-stack-2x"></i>
     <i class="fa fa-user fa-stack-1x"></i>
-  </span>
+  </span> -->
 </div>
