--- a/public/views/templates/portfolio.html
+++ b/public/views/templates/portfolio.html
@@ -4,14 +4,14 @@
       <div class="project-preview thumbnail">
         <h4>Canopy</h4>
         <img src="images/Canopy.svg">
-        <button class="btn btn-primary project-button">VIEW PROJECT</button>
+        <button class="btn project-button">VIEW PROJECT</button></a>
       </div>
     </div>
     <div class="col-sm-6">
       <div class="project-preview thumbnail">
         <h4>Pub Crawler</h4>
         <img src="images/PubCrawler.svg">
-        <button class="btn btn-primary project-button">VIEW PROJECT</button>
+        <a href="http://pub-crawler.herokuapp.com" target="_blank"><button class="btn project-button">VIEW PROJECT</button></a>
       </div>
     </div>
   </div>
