--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -8,13 +8,18 @@
   src: url("/fonts/GothamCond-Black.otf");
 }
 
+@font-face {
+  font-family: GothamNarrow-Light;
+  src: url("/fonts/GothamNarrow-Light.otf");
+}
+
 *:focus {
   outline: 0 !important;
 }
 
 body {
   background-color: #FFF;
-  font-family: ;
+  font-family: GothamNarrow-Light;
 }
 
 .align-center {
@@ -60,18 +65,23 @@ body {
 
 .project-button {
   color: #337ab7;
-  background-color: transparent;
+  background-color: #FFFFFF;
   border: 1px solid #337ab7;
   border-radius:0;
+  margin-top: 4px;
 }
 
 .project-button:hover {
   color: #ffffff;
-  background: rgba(45, 45, 45, 1);
+  background: #337ab7;
   -webkit-transition: color .55s;
   -moz-transition:    color .55s;
   -ms-transition:     color .55s;
   -o-transition:      color .55s;
+}
+
+.btn {
+  textolor: #337ab7;
 }
 
 #landing-body {
