--- a/public/views/templates/about.html
+++ b/public/views/templates/about.html
@@ -3,7 +3,7 @@
 
     <div class="container align-center" id="about-container">
       <div class="row">
-        <img src="images/150.svg">
+        <img src="images/150.png">
       </div>
     </div>
 
