--- a/public/views/templates/portfolio.html
+++ b/public/views/templates/portfolio.html
@@ -3,14 +3,14 @@
     <div class="col-sm-6">
       <div class="project-preview thumbnail">
         <h4>Canopy</h4>
-        <img src="images/Canopy.svg">
+        <img src="images/Canopy.jpg">
         <button class="btn project-button">VIEW PROJECT</button></a>
       </div>
     </div>
     <div class="col-sm-6">
       <div class="project-preview thumbnail">
         <h4>Pub Crawler</h4>
-        <img src="images/PubCrawler.svg">
+        <img src="images/PubCrawler.jpg">
         <a href="http://pub-crawler.herokuapp.com" target="_blank"><button class="btn project-button">VIEW PROJECT</button></a>
       </div>
     </div>
