--- a/public/views/templates/about.html
+++ b/public/views/templates/about.html
@@ -28,7 +28,7 @@
 
     <div class="container align-center">
       <div class="row">
-        <img src="images/NodeJS.png" width="40px">
+        <img src="images/Nodejs.png" width="40px">
         <img src="images/Express.png" width="40px">
         <img src="images/AngularJS.png" width="40px">
         <img src="images/Ruby.png" width="40px">
