--- a/public/views/templates/about.html
+++ b/public/views/templates/about.html
@@ -37,7 +37,7 @@
         <img src="images/PostgreSQL.png" width="40px">
         <img src="images/jQuery.png" width="40px">
         <img src="images/Bootstrap.png" width="40px">
-        <img src="images/GoogleFontApi.png" width="40px">
+        <img src="images/GoogleFontAPI.png" width="40px">
         <img src="images/FontAwesome.png" width="40px">
         <img src="images/GoogleMaps.png" width="40px">
         <img src="images/GoogleAnalytics.png" width="40px">
