fixed project link

--- a/public/views/templates/portfolio.html
+++ b/public/views/templates/portfolio.html
@@ -4,7 +4,7 @@
       <div class="project-preview thumbnail">
         <h4>Canopy</h4>
         <img src="images/Canopy.jpg">
-        <button class="btn project-button">VIEW PROJECT</button></a>
+        <a href="http://project-canopy.herokuapp.com" target="_blank"><button class="btn project-button">VIEW PROJECT</button></a>
       </div>
     </div>
     <div class="col-sm-6">
