--- a/public/views/templates/about.html
+++ b/public/views/templates/about.html
@@ -28,19 +28,19 @@
 
     <div class="container align-center">
       <div class="row">
-        <img src="images/Nodejs.png" width="40px">
-        <img src="images/Express.png" width="40px">
-        <img src="images/AngularJS.png" width="40px">
-        <img src="images/Ruby.png" width="40px">
-        <img src="images/RubyOnRails.png" width="40px">
-        <img src="images/MongoDB.png" width="40px">
-        <img src="images/PostgreSQL.png" width="40px">
-        <img src="images/jQuery.png" width="40px">
-        <img src="images/Bootstrap.png" width="40px">
-        <img src="images/GoogleFontAPI.png" width="40px">
-        <img src="images/FontAwesome.png" width="40px">
-        <img src="images/GoogleMaps.png" width="40px">
-        <img src="images/GoogleAnalytics.png" width="40px">
+        <img src="images/Nodejs.png" width="40px" class="thumbnail dev-thumbnail">
+        <img src="images/Express.png" width="40px" class="thumbnail dev-thumbnail">
+        <img src="images/AngularJS.png" width="40px" class="thumbnail dev-thumbnail">
+        <img src="images/Ruby.png" width="40px" class="thumbnail dev-thumbnail">
+        <img src="images/RubyOnRails.png" width="40px" class="thumbnail dev-thumbnail">
+        <img src="images/MongoDB.png" width="40px" class="thumbnail dev-thumbnail">
+        <img src="images/PostgreSQL.png" width="40px" class="thumbnail dev-thumbnail">
+        <img src="images/jQuery.png" width="40px" class="thumbnail dev-thumbnail">
+        <img src="images/Bootstrap.png" width="40px" class="thumbnail dev-thumbnail">
+        <img src="images/GoogleFontAPI.png" width="40px" class="thumbnail dev-thumbnail">
+        <img src="images/FontAwesome.png" width="40px" class="thumbnail dev-thumbnail">
+        <img src="images/GoogleMaps.png" width="40px" class="thumbnail dev-thumbnail">
+        <img src="images/GoogleAnalytics.png" width="40px" class="thumbnail dev-thumbnail">
       </div>
     </div>
 
