--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -70,7 +70,11 @@ body {
 .dev-thumbnail {
   height: 40px;
   width: 40px;
+  border: 0px;
   display: inline-block !important;
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2);
+  border-radius: 3px;
+  background-color: #FFFFFF;
 
 }
 
