--- a/public/views/index.html
+++ b/public/views/index.html
@@ -35,9 +35,9 @@
         <p class="navbar-text">ALEX CHAN</p> 
       </div>
       <ul class="nav">
-        <li><a href="/about">about</a></li>
-        <li><a href="/portfolio">portfolio</a></li>
-        <li><a href="/contact">contact</a></li>
+        <li><a href="/about">ABOUT</a></li>
+        <li><a href="/portfolio">PORTFOLIO</a></li>
+        <li><a href="/contact">CONTACT</a></li>
       </ul>
     </header>
   </div>
