--- a/public/views/templates/about.html
+++ b/public/views/templates/about.html
@@ -1,48 +1,64 @@
-<div class="container">
+<div class="container" id="about-container">
   <div class="row">
+    
+    <div class="col-md-4 align-center">
+      <img src="images/600.jpg" class="img-circle" style="width:300px">
+    </div>
 
-    <div class="container align-center" id="about-container">
-      <div class="row">
-        <img src="images/150.png">
+    <div class="col-md-8 well">
+      <h1>ABOUT ME</h1>
+      <p>I'm a Full Stack Developer from San Francisco, California. I just finished a 12 week immersive course at General Assembly learning about web development. During my studies there, I have built full stack applications in Javascript and Ruby on Rails. My focus is writing clean, elegant and efficient code. I am a minimalist who believes that less is more.</p>
+    </div>
+
+    <div class="col-md-8 well">
+      <h1>SKILLS</h1> 
+      <div class="thumbnail skills">
+        <p>HTML</p>
+      </div>
+      <div class="thumbnail skills">
+        <p>CSS</p>
+      </div>
+      <div class="thumbnail skills">
+        <p>JavaScript</p>
+      </div>
+      <div class="thumbnail skills">
+        <p>Ruby on Rails</p>
+      </div>
+      <div class="thumbnail skills">
+        <p>AngularJS</p>
+      </div>
+      <div class="thumbnail skills">
+        <p>PostgreSQL</p>
+      </div>
+      <div class="thumbnail skills">
+        <p>MongoDB</p>
+      </div>
+      <div class="thumbnail skills">
+        <p>jQuery</p>
+      </div>
+      <div class="thumbnail skills">
+        <p>API</p>
       </div>
     </div>
 
-    <div class="container align-center">
-      <div class="row">
-        <div class="col-sm-4 col-sm-offset-4">
-          <h2>about me</h2>
-          <p><b>Who:</b> Alex Chan</p>
-          <p><b>What:</b> Full Stack Web Developer</p>
-          <p><b>Where:</b> San Francisco, CA</p>
-          <p><b>When:</b> 2015 - Present</p>
-          <p><b>Why:</b> Passion</p>
-        </div>
-      </div>
-    </div>
 
-    <div class="container align-center">
-      <div class="row">
-        <h4>I have used the following technologies and applications as part of my development</h4>
-      </div>
-    </div>
+<!--     <div class="col-sm-4 well">
+      <h4>I have used the following technologies and applications as part of my development</h4>
+      <img src="images/Nodejs.png" width="40px" class="thumbnail dev-thumbnail">
+      <img src="images/Express.png" width="40px" class="thumbnail dev-thumbnail">
+      <img src="images/AngularJS.png" width="40px" class="thumbnail dev-thumbnail">
+      <img src="images/Ruby.png" width="40px" class="thumbnail dev-thumbnail">
+      <img src="images/RubyOnRails.png" width="40px" class="thumbnail dev-thumbnail">
+      <img src="images/MongoDB.png" width="40px" class="thumbnail dev-thumbnail">
+      <img src="images/PostgreSQL.png" width="40px" class="thumbnail dev-thumbnail">
+      <img src="images/jQuery.png" width="40px" class="thumbnail dev-thumbnail">
+      <img src="images/Bootstrap.png" width="40px" class="thumbnail dev-thumbnail">
+      <img src="images/GoogleFontAPI.png" width="40px" class="thumbnail dev-thumbnail">
+      <img src="images/FontAwesome.png" width="40px" class="thumbnail dev-thumbnail">
+      <img src="images/GoogleMaps.png" width="40px" class="thumbnail dev-thumbnail">
+      <img src="images/GoogleAnalytics.png" width="40px" class="thumbnail dev-thumbnail">
+    </div> -->
 
-    <div class="container align-center">
-      <div class="row">
-        <img src="images/Nodejs.png" width="40px" class="thumbnail dev-thumbnail">
-        <img src="images/Express.png" width="40px" class="thumbnail dev-thumbnail">
-        <img src="images/AngularJS.png" width="40px" class="thumbnail dev-thumbnail">
-        <img src="images/Ruby.png" width="40px" class="thumbnail dev-thumbnail">
-        <img src="images/RubyOnRails.png" width="40px" class="thumbnail dev-thumbnail">
-        <img src="images/MongoDB.png" width="40px" class="thumbnail dev-thumbnail">
-        <img src="images/PostgreSQL.png" width="40px" class="thumbnail dev-thumbnail">
-        <img src="images/jQuery.png" width="40px" class="thumbnail dev-thumbnail">
-        <img src="images/Bootstrap.png" width="40px" class="thumbnail dev-thumbnail">
-        <img src="images/GoogleFontAPI.png" width="40px" class="thumbnail dev-thumbnail">
-        <img src="images/FontAwesome.png" width="40px" class="thumbnail dev-thumbnail">
-        <img src="images/GoogleMaps.png" width="40px" class="thumbnail dev-thumbnail">
-        <img src="images/GoogleAnalytics.png" width="40px" class="thumbnail dev-thumbnail">
-      </div>
-    </div>
 
   </div>
 </div>
