--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -22,15 +22,17 @@
 .nav a {
   display: block;
   color: #e9e9e9;
-  font-size: 1.125em;
+  font-family: RefrigeratorDeluxe;
+  letter-spacing: 1px;
+  font-size: 23px;
   font-weight: 300;
   text-align: center;
   padding: .4em;
 }
 
 .navbar-text {
-  font-family: GothamCond-Medium;
-  font-size: 45px;
+  font-family: RefrigeratorDeluxe;
+  font-size: 65px;
   color: #337ab7;
   letter-spacing: 1px;
   margin-top: 4px;
