--- a/public/views/templates/portfolio.html
+++ b/public/views/templates/portfolio.html
@@ -2,14 +2,14 @@
   <div class="row">
     <div class="col-sm-6">
       <div class="project-preview thumbnail project-thumbnail">
-        <h4>Canopy</h4>
+        <h4 class="project-title">Canopy</h4>
         <img src="images/Canopy.jpg">
         <a href="http://project-canopy.herokuapp.com" target="_blank"><button class="btn project-button">VIEW PROJECT</button></a>
       </div>
     </div>
     <div class="col-sm-6">
       <div class="project-preview thumbnail project-thumbnail">
-        <h4>Pub Crawler</h4>
+        <h4 class="project-title">Pub Crawler</h4>
         <img src="images/PubCrawler.jpg">
         <a href="http://pub-crawler.herokuapp.com" target="_blank"><button class="btn project-button">VIEW PROJECT</button></a>
       </div>
