--- a/public/views/templates/about.html
+++ b/public/views/templates/about.html
@@ -22,6 +22,12 @@
         <p>JavaScript</p>
       </div>
       <div class="thumbnail skills">
+        <p>Express</p>
+      </div>
+      <div class="thumbnail skills">
+        <p>Node.js</p>
+      </div>
+      <div class="thumbnail skills">
         <p>Ruby on Rails</p>
       </div>
       <div class="thumbnail skills">
@@ -40,8 +46,6 @@
         <p>API</p>
       </div>
     </div>
-
-
 <!--     <div class="col-sm-4 well">
       <h4>I have used the following technologies and applications as part of my development</h4>
       <img src="images/Nodejs.png" width="40px" class="thumbnail dev-thumbnail">
@@ -58,7 +62,6 @@
       <img src="images/GoogleMaps.png" width="40px" class="thumbnail dev-thumbnail">
       <img src="images/GoogleAnalytics.png" width="40px" class="thumbnail dev-thumbnail">
     </div> -->
-
-
   </div>
 </div>
+<br><br>
