--- a/public/views/templates/contact.html
+++ b/public/views/templates/contact.html
@@ -3,13 +3,13 @@
     <div class="col-md-12">
       <h1>Connect and Collaborate</h1>
       <span class="fa-stack fa-3x hvr-grow">
-        <a href="https://www.linkedin.com/in/alexchan415">
+        <a href="https://www.linkedin.com/in/alexchan415" target="_blank">
         <i class="fa fa-circle-thin fa-stack-2x"></i>
         <i class="fa fa-linkedin fa-stack-1x"></i>
         </a>
       </span>
       <span class="fa-stack fa-3x hvr-grow">
-        <a href="https://github.com/alex415">
+        <a href="https://github.com/alex415" target="_blank">
         <i class="fa fa-circle-thin fa-stack-2x"></i>
         <i class="fa fa-github fa-stack-1x"></i>
         </a>
