--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -34,7 +34,8 @@
   font-family: RefrigeratorDeluxe;
   font-size: 65px;
   color: #337ab7;
-  letter-spacing: 0px;
+  font-weight: bold;
+  letter-spacing: 6px;
   margin-top: 4px;
   margin-bottom: 0;
 }
