--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -91,7 +91,7 @@ body {
   display: inline-block !important;
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
-  background-color: #FFFFFF;
+  background-color: rgba(234, 234, 234, .2);
 }
 
 /*======= Button Styling ============*/
